--- a/download.html
+++ b/download.html
@@ -96,8 +96,8 @@
 <script>
 $(function() {
 	var config = {
-		dowIosUrl: './images/logo.png',
-		dowAndroidUrl: './images/logo.png'
+		dowAndroidUrl: 'http://app.mi.com/details?id=com.siac.yidianzhan&from=groupmessage',
+		dowIosUrl: 'https://itunes.apple.com/cn/app/yi-dong-cai-bian/id1290015091?mt=8-'
 	}
 	$('#dow_ios').click(function() {
 		location.href = config.dowIosUrl;
