--- a/download.html
+++ b/download.html
@@ -96,7 +96,9 @@
 <script>
 $(function() {
 	var config = {
+		//dowAndroidUrl: 'http://evready.oss-cn-shanghai.aliyuncs.com/apk/1.10.9.apk',
 		dowAndroidUrl: 'http://app.mi.com/details?id=com.siac.yidianzhan&from=groupmessage',
+		
 		dowIosUrl: 'https://itunes.apple.com/cn/app/yi-dong-cai-bian/id1290015091?mt=8-'
 	}
 	$('#dow_ios').click(function() {
