--- a/power-ball.html
+++ b/power-ball.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<meta charset="UTF-8">
-	<title>power</title>
+	<title>获取能量球</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/power.ball.css">
 </head>
@@ -22,6 +22,12 @@
 			<div>
 				<div class="code_title">IOS用户交流群</div>
 				<div>
+					<img src="images/code_2.png" alt="">
+				</div>
+			</div>
+			<!-- <div>
+				<div class="code_title">IOS用户交流群</div>
+				<div>
 					<img src="images/code_ios.jpg" alt="">
 				</div>
 			</div>
@@ -30,7 +36,7 @@
 				<div>
 					<img src="images/code_ad.jpg" alt="">
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </body>
