--- a/register-tel.html
+++ b/register-tel.html
@@ -53,6 +53,7 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/layer/layer.min.js"></script>
 <script src="js/ajax.js"></script>
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
 (function() {
     var registerObj = {
@@ -185,6 +186,84 @@
     };
     $(registerObj.init);
 })();
+</script>
+<script>
+(function() {
+    var invitedCode = ''
+    var l = location;
+    var lList = l.href.split('/');
+    lList.pop();
+    var shareImgUrl = lList.join('/') + '/images/share.png';
+    var shareUrl = '';
+    if (localStorage.token) {
+        $.ajaxByGet('/wechat/user/user/info', { token: localStorage.token }, function(res) {
+            if (res.code == 200) {
+                invitedCode = res.data.inviteCode;
+                wxconfig()
+            }
+        })
+    } else {
+        wxconfig();
+    }
+
+    function wxconfig() {
+        if (invitedCode) {
+            shareUrl = lList.join('/') + '/register-tel.html?invitedCode=' + invitedCode;
+        } else {
+            shareUrl = l.href
+        }
+        var data = {
+            url: l.href
+        };
+        $.ajaxByGet('/wechat/auth/getAuthInfo', data, function(res) {
+            if (res.code == 200) {
+                var data = res.data;
+                console.log(data);
+                wx.config({
+                    debug: false,
+                    appId: data.appId,
+                    timestamp: data.timestamp,
+                    nonceStr: data.nonceStr,
+                    signature: data.signature,
+                    jsApiList: [
+                        // 所有要调用的 API 都要加到这个列表中
+                        'checkJsApi',
+                        'onMenuShareTimeline', //分享到朋友圈
+                        'onMenuShareAppMessage', //分享给好友
+                        'hideMenuItems', //隐藏部分分享
+                        'scanQRCode' //扫一扫
+                    ]
+                });
+            }
+        });
+    }
+    wx.ready(function() {
+        console.log('wx.ready');
+        var shareCode = '';
+        if (invitedCode) {
+            shareCode = '，邀请码：' + invitedCode
+        }
+        var shareObjFriend = {
+            title: '新能源汽车能免费充电啦!',
+            desc: '您的好友邀您一起充电' + shareCode,
+            link: shareUrl,
+            imgUrl: shareImgUrl,
+            complete: function() {
+                $('#mark').hide();
+            },
+        }
+        var shareObjTimeline = {
+            title: '新能源汽车能免费充电啦!邀您一起充电' + shareCode,
+            link: shareUrl,
+            imgUrl: shareImgUrl,
+            complete: function() {
+                $('#mark').hide();
+            },
+        }
+        wx.onMenuShareTimeline(shareObjTimeline);
+        wx.onMenuShareAppMessage(shareObjFriend);
+    });
+})()
 </script>
 
 </html>
